# Snake_OpenGL

./: .gitmodules  CMakeLists.txt  README.md
config/: sprite.vs
lib/FreeTypeAmalgam-master/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/CLI/: CLI.cpp  CLI.hpp  CMakeLists.txt
src/Game/: CMakeLists.txt  Game.cpp  Game.hpp
src/Utility/: CMakeLists.txt  ResourceManager.cpp  ResourceManager.hpp  Shader.cpp  Shader.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  TextRenderer.cpp  TextRenderer.hpp  Texture.cpp  Texture.hpp
src/glad/: CMakeLists.txt
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
src/stb_image/: CMakeLists.txt
